전체적으로 코드 개선하기 (리팩토링) (#44)
* refactor: 주석 제거 및 명확한 타입 지정

* refactor: 예외 처리 전체적으로 리팩토링

- 예외 클래스를 상속 관계로 깔끔히 리팩토링 -> ControllerAdvice에서 부모 예외에 대한 메서드 하나만 구현

* refactor: AOP로 유효성 검사 처리하던 부분 리팩토링

기존에 AOP로 BindingResult가 파라미터에 존재하면 유효성 검사를 처리하도록 구현했는데,
`MethodArgumentNotValidException` 를 전역 예외 처리하여 굳이 AOP를 구현하지 않아도 됨
더 깔끔하게 리팩토링 완료

* refactor: dto 패키지 구조 리팩토링

- 기존엔 도메인별로 패키지를 만들어서 구분해 줬는데, request/response 패키지만 만들어서 정리

* refactor: ControllerAdvice 이름 및 위치 변경

* refactor: `S3FileUploader` 파일 위치를 service 패키지 내부로 이동

* refactor: 게시물 댓글 관계 cascade 설정 및 옵션 수정

- 게시물이 삭제되면 댓글도 삭제되어야 하는데, 이 부분 누락되어 있었음

* refactor: 요청 성공 시 응답 포맷 변경

- 현재 data 응답이 필요 없어도 `ApiResponse` 로 응답하고 있는데, data 응답이 필요하지 않으면 Void, 필요할 때만 사용하도록 리팩토링

* refactor: `PageImpl` 응답에서 `pageSerializationMode` 설정을 통해 DTO 응답 리팩토링

- `PageImpl` 자체를 응답하게 되면, 그안에 필드에 의존하기에 API 일관성이 깨질 수 있음
- 새롭게 추가된 `pageSerializationMode` 옵션을 통해 `PagedModel` 라는 DTO로 응답

* refactor: 스트림, 람다 등을 사용해 가독성 개선 리팩토링

- 무분별한 if문, for문 등이 사용되는 부분을 깔끔하게 리팩토링

* rename: 패키지명을 entity에서 domain으로 변경

* refactor: 서비스 계층에 몰려있던 유효성 검사 커스텀 Validator로 해결 및 에러 메시지 한 곳에서 관리

- 기존에는 서비스 계층에서 유효성 검사(중복된 이메일, 닉네임 등)가 이루어졌는데, 커스텀 Validator를 구현하여 해결
- 에러 메시지를 필요한 곳에서 계속 작성했는데, `ErrorMessage` 클래스에서 모두 관리

* refactor: 기본 생성자의 접근 제어자를 protected로 수정

JPA 표준 스펙을 위해 생성한 것이기 때문에 외부에서 접근하지 못하도록 protected로 수정

* refactor: 예외처리 및 API 응답 리팩토링으로 테스트 코드도 리팩토링

* refactor: 더 간결한 코드로

* refactor: `@BeforeEach` 를 `@AfterEach` 로 변경

* refactor: 중복되는 `@Transactional` 어노테이션을 클래스 레벨에 적용

* refactor: `ClimbingException` 클래스 하나로 예외처리 할 수 있도록 리팩토링, 무분별하게 많은 커스텀 예외 클래스 모두 제거

- `ClimbingException` 에서 메시지 주입 받음
- 원래 status를 각 예외 클래스에서 지정했는데, 현재는 다 없앴기에 500으로 임시 설정해둔 상태. 곧바로 enum으로 리팩토링 예정

* refactor: 예외 관련 클래스를 exception 패키지에 위치

* refactor: 비즈니스 로직이 들어간 유효성 검사를 서비스 계층에 위치

- 커스텀 Validator에서 repository에 의존하여 비즈니스 로직을 수행하는 것은 적절치 않다고 판단

* refactor: 에러메시지를 상태코드를 포함한 enum으로 리팩토링하기 위해 유효성 검사 에러메시지를 따로 분리

- 분리해준 이